@@ -50,6 +50,9 @@
 	Fixed gf normal mode key on following symbolic links that target files by
 	path that has symbolic links to directories.  Thanks to filterfalse.
 
+	Fixed failing with error on changing case (gu*/gU*) when target file
+	exists.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
